# substreams-solana

./: .gitignore  .sfreleaser  .sfreleaser.pre-release.sh  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  buf.gen.yaml  gen.sh  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: dependabot.yml  secret-scanning.yml
core/: Cargo.toml  build.rs
core/src/: address.rs  block_view.rs  lib.rs
core/src/pb/: .last_generated_hash  mod.rs  sf.solana.type.v1.rs  sf.substreams.sink.service.v1.rs  sf.substreams.v1.rs
core/src/pb/quick/: mod.rs
core/src/pb/quick/google/: mod.rs  protobuf.rs
core/src/pb/quick/sf/: mod.rs
core/src/pb/quick/sf/solana/: mod.rs
core/src/pb/quick/sf/solana/type/: v1.rs
macro/: Cargo.toml
macro/src/: lib.rs
macro/tests/: basic.rs
substreams-solana/: Cargo.toml
substreams-solana/src/: instruction.rs  lib.rs
