[package]
name = "substreams-solana-core"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
prost = { version = "0.13" }
prost-types = "0.13"
bs58 = "0.4.0"
quick-protobuf = { version = "0.8.0", optional = true }

[build-dependencies]
prost-build = "0.13"
pb-rs = "0.10.0"
walkdir = "2"

[features]
quick-protobuf = ["dep:quick-protobuf"]

[dev-dependencies]
anyhow = "1"
hex = "0.4"
paste = "1"
pretty_assertions = "1.4"
