[package]
name = "substreams-solana-core"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
prost = { version = "0.14" }
prost-types = "0.14"
bs58 = "0.5.1"

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
anyhow = "1"
hex = "0.4"
paste = "1"
pretty_assertions = "1.4"
