[package]
name = "substreams-solana-macro"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
bs58 = "0.4.0"
