[package]
name = "substreams-solana"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.72"
num_enum = "0.7.0"
substreams = "0.6"
substreams-solana-core = { workspace = true }
substreams-solana-macro = { workspace = true }
